--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ Jinja2==2.7.1
 MarkupSafe==0.18
 SQLAlchemy==0.8.4
 Werkzeug==0.9.4
+gunicorn==18.0
 httplib2==0.8
 itsdangerous==0.23
-numpy==1.8.0
 six==1.4.1
 twilio==3.6.4
 unittest2==0.5.1
